对比HibernateDatabase，初步完成RivuletDatabase，即根据数据库中的数据模型相关表中的数据构造出一个可以通过Liquibase管理的数据模型。还未测试其功能是否正常。